samples/_failures_safe/1761466882_48d95c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_059ffe09.c: In function ‘main’:
./samples/SAFE/__tmp_059ffe09.c:176:9: error: expected expression at end of input
  176 |         printf(", Value='%s'\n",
      |         ^~~~~~
./samples/SAFE/__tmp_059ffe09.c:176:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_059ffe09.c:176:9: error: expected declaration or statement at end of input
